--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Cid Kageno — iOS26 Liquid Glass</title>
+<title>Cid Kageno | Developer Profile</title>
 
 <!-- Tailwind CDN with system dark mode -->
 <script>
@@ -99,7 +99,7 @@ main.container {
     <!-- Left Card -->
     <div class="liquid-card">
       <div class="flex items-center gap-4 mb-4">
-        <div class="logo-dot shrink-0 text-xl font-bold">PG</div>
+        <div class="logo-dot shrink-0 text-xl font-bold"> </div>
         <div>
           <h1 class="text-3xl font-bold">Cid <span class="text-gray-500 dark:text-gray-300">Kageno</span></h1>
           <p class="text-sm text-gray-400 mt-1">HSC24 • Developer • AI enthusiast</p>
@@ -111,7 +111,7 @@ main.container {
       <div class="mt-4 flex flex-wrap gap-3">
         <a href="contact.html" class="liquid-btn text-white">Contact</a>
         <a href="projects.html" class="liquid-btn text-white">Projects</a>
-        <button data-toggle-theme class="liquid-btn"><span id="themeIcon">⛅</span></button>
+        <button data-toggle-theme class="liquid-btn"><span id="themeIcon">🌤️</span></button>
       </div>
     </div>
 
@@ -123,8 +123,8 @@ main.container {
         <h3 class="text-lg font-semibold mb-2">Hello — I’m Cid</h3>
         <p class="text-sm text-gray-400 max-w-xs mb-4">Student, tinkerer and web developer learning AI. I enjoy making small tools and learning by building.</p>
         <div class="flex gap-3">
-          <a href="https://wa.me/8801731371266" target="_blank" class="liquid-btn text-sm">Message</a>
-          <a href="https://github.com" target="_blank" class="liquid-btn text-sm">GitHub</a>
+          <a href="https://wa.me/8801731371266" target="_blank" class="liquid-btn text-sm">WhatsApp</a>
+          <a href="https://github.com/cid-kageno1" target="_blank" class="liquid-btn text-sm">GitHub</a>
         </div>
       </div>
     </div>
@@ -190,7 +190,7 @@ main.container {
         </div>
         <div class="liquid-card p-3 text-center">
           <div class="font-semibold">Education</div>
-          <div class="text-sm text-gray-400">HSC24 — Government Rajendra College</div>
+          <div class="text-sm text-gray-400">HSC-24 — Government Rajendra College</div>
         </div>
       </div>
     </div>
