--- a/index.html
+++ b/index.html
@@ -164,9 +164,18 @@ main.container {
           <div class="w-full h-2 bg-gray-300 rounded-full mt-1">
             <div class="h-2 rounded-full bg-gradient-to-r from-gray-700 to-gray-900" style="width:80%"></div>
           </div>
+          <div class="glass p-5 rounded-xl border border-white/15 text-center sm:text-left" data-aos="fade-right" data-aos-delay="300">
+          <div class="text-primary-500 mb-2 text-2xl"><i data-feather="heart"></i></div>
+          <h3 class="font-medium text-white mb-1">Interests</h3>
+          <p class="text-gray-400">AI, Bot Development, Web Dev</p>
         </div>
-        <div>
-          <div class="flex justify-between text-sm"><span>Python</span><span>70%</span></div>
+        <div class="glass p-5 rounded-xl border border-white/15 text-center sm:text-left" data-aos="fade-right" data-aos-delay="400">
+          <div class="text-primary-500 mb-2 text-2xl"><i data-feather="award"></i></div>
+          <h3 class="font-medium text-white mb-1">Expertise</h3>
+          <p class="text-gray-400">Learning (Student)</p>
+        </div>
+      </div>
+         <div class="flex justify-between text-sm"><span>Python</span><span>70%</span></div>
           <div class="w-full h-2 bg-gray-300 rounded-full mt-1">
             <div class="h-2 rounded-full bg-gradient-to-r from-gray-700 to-gray-900" style="width:70%"></div>
           </div>
