--- a/index.html
+++ b/index.html
@@ -1,119 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="bg-white text-black">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cid Kageno — Portfolio</title>
 
-  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Tailwind CDN + system dark mode -->
   <script>
     tailwind.config = {
       darkMode: "media",
-      theme: { extend: {} },
+      theme: { extend: {} }
     };
   </script>
+  <script src="https://cdn.tailwindcss.com"></script>
 
   <link rel="stylesheet" href="style.css" />
 </head>
 
-<body class="min-h-screen">
+<body class="transition-colors duration-300">
 
   <!-- NAVBAR -->
-  <nav class="glass-nav fixed top-4 left-1/2 -translate-x-1/2 z-50">
-    <ul class="flex gap-6 font-medium">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
+  <header class="fixed top-0 left-0 w-full z-50 flex justify-center px-4 pt-5">
+    <nav class="liquid-nav py-3 px-6 rounded-2xl shadow-xl backdrop-blur-xl flex gap-6 text-sm font-medium">
+      <a href="#home" class="hover:opacity-80">Home</a>
+      <a href="#projects" class="hover:opacity-80">Projects</a>
+      <a href="#contact" class="hover:opacity-80">Contact</a>
+    </nav>
+  </header>
 
-  <!-- HERO -->
+  <!-- HERO + ABOUT MERGED -->
   <section id="home" class="container mx-auto px-6 pt-36 pb-24 text-center">
     <div class="liquid-card p-10 max-w-3xl mx-auto fade-in">
+
+      <img src="https://i.ibb.co/1K9v7yr/cid.jpg"
+           class="w-28 h-28 rounded-full mx-auto mb-6 shadow-lg">
+
       <h1 class="text-5xl font-bold mb-3">
-        Cid <span class="opacity-75">Kageno</span>
+        Cid <span class="opacity-70">Kageno</span>
       </h1>
 
-      <p class="text-xl opacity-80 mb-6">Developer • Student • Curious Human</p>
+      <p class="text-xl opacity-80 mb-6">Developer • Student</p>
 
-      <p class="text-base opacity-90 leading-relaxed max-w-xl mx-auto">
-        I build small tools, experiment with AI, and explore clean interfaces.
-        My work is simple: I create things that help me learn faster.
+      <p class="text-base opacity-90 leading-relaxed max-w-xl mx-auto mb-6">
+        I build small tools, experiment with minimal interfaces, and explore
+        backend logic. I enjoy creating tiny apps, simple AI utilities, and
+        clean UI elements inspired by mobile OS design languages.
       </p>
 
-      <div class="flex justify-center gap-4 mt-8">
+      <div class="flex justify-center gap-4 mt-6 flex-wrap">
         <a href="#projects" class="liquid-btn primary-btn">Explore Work</a>
         <a href="#contact" class="liquid-btn">Contact</a>
+        <a href="https://github.com/" target="_blank" class="liquid-btn">GitHub</a>
+        <a href="https://wa.me/" target="_blank" class="liquid-btn">WhatsApp</a>
       </div>
+
     </div>
   </section>
 
   <!-- PROJECTS -->
-  <section id="projects" class="container mx-auto px-6 pb-24">
-    <h2 class="section-title">Projects</h2>
+  <section id="projects" class="container mx-auto px-6 pb-32">
+    <h2 class="text-3xl font-bold text-center mb-12">Projects</h2>
 
-    <div class="grid gap-6 md:grid-cols-2 lg:grid-cols-3 mt-10">
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
 
-      <div class="liquid-card project-card p-6">
-        <h3 class="font-semibold text-lg mb-2">Baby-Bot API</h3>
-        <p class="opacity-80 mb-4 text-sm">A self-learning chat API that stores memory dynamically.</p>
-        <a href="#" class="liquid-btn w-full text-center">View</a>
+      <div class="liquid-card p-6">
+        <h3 class="text-xl font-semibold mb-2">Project One</h3>
+        <p class="opacity-80 mb-4 text-sm">
+          A short description of your project goes here.
+        </p>
+        <a href="#" class="liquid-btn small-btn">View</a>
       </div>
 
-      <div class="liquid-card project-card p-6">
-        <h3 class="font-semibold text-lg mb-2">Alpha Render Chat</h3>
-        <p class="opacity-80 mb-4 text-sm">Lightweight Express API deployed on Render.</p>
-        <a href="#" class="liquid-btn w-full text-center">View</a>
+      <div class="liquid-card p-6">
+        <h3 class="text-xl font-semibold mb-2">Project Two</h3>
+        <p class="opacity-80 mb-4 text-sm">
+          Explain what it does, its purpose, or what you learned.
+        </p>
+        <a href="#" class="liquid-btn small-btn">View</a>
       </div>
 
-      <div class="liquid-card project-card p-6">
-        <h3 class="font-semibold text-lg mb-2">Minimal Portfolio</h3>
-        <p class="opacity-80 mb-4 text-sm">Clean iOS-style glass UI with auto dark mode.</p>
-        <a href="#" class="liquid-btn w-full text-center">View</a>
+      <div class="liquid-card p-6">
+        <h3 class="text-xl font-semibold mb-2">Project Three</h3>
+        <p class="opacity-80 mb-4 text-sm">
+          Add more projects as needed. This grid expands automatically.
+        </p>
+        <a href="#" class="liquid-btn small-btn">View</a>
       </div>
 
-    </div>
-  </section>
-
-  <!-- ABOUT -->
-  <section id="about" class="container mx-auto px-6 pb-24">
-    <h2 class="section-title">About Me</h2>
-
-    <div class="liquid-card max-w-3xl mx-auto p-10 text-center fade-in">
-      <img src="https://i.ibb.co/1K9v7yr/cid.jpg"
-           class="w-28 h-28 rounded-full mx-auto mb-4 shadow-lg">
-
-      <p class="opacity-90 leading-relaxed text-lg">
-        I enjoy experimenting with code, building tiny apps,  
-        and learning by breaking things and fixing them again.  
-        My current interests: AI, simple UX, and server-side logic.
-      </p>
-
-      <div class="flex justify-center gap-4 mt-6">
-        <a class="liquid-btn" href="https://github.com/">GitHub</a>
-        <a class="liquid-btn" href="https://wa.me/">WhatsApp</a>
-      </div>
     </div>
   </section>
 
   <!-- CONTACT -->
-  <section id="contact" class="container mx-auto px-6 pb-36">
-    <h2 class="section-title">Contact</h2>
+  <section id="contact" class="container mx-auto px-6 pb-32 text-center">
+    <div class="liquid-card p-10 max-w-2xl mx-auto fade-in">
+      <h2 class="text-3xl font-bold mb-4">Contact</h2>
+      <p class="opacity-80 mb-6">
+        Reach out for collaborations, questions, or project ideas.
+      </p>
 
-    <div class="liquid-card p-8 max-w-xl mx-auto text-center fade-in">
-      <p class="opacity-80 mb-4">Reach me directly on WhatsApp or GitHub.</p>
-
-      <div class="flex justify-center gap-4">
-        <a class="liquid-btn" href="https://wa.me/">WhatsApp</a>
-        <a class="liquid-btn" href="https://github.com/">GitHub</a>
-      </div>
+      <a href="mailto:example@gmail.com" class="liquid-btn primary-btn">Email Me</a>
     </div>
   </section>
 
   <!-- FOOTER -->
-  <footer class="glass-nav mt-10 mb-6 mx-auto text-center text-sm opacity-80 w-max px-6 py-3">
-    © <span id="year"></span> Cid Kageno
+  <footer class="mt-20 pb-6 flex justify-center">
+    <div class="glass-footer px-6 py-3 rounded-2xl text-center text-sm shadow-lg">
+      <p class="opacity-70">
+        © <span id="year"></span> Cid Kageno — Portfolio
+      </p>
+    </div>
   </footer>
 
   <script src="script.js"></script>
