--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
   <!-- HERO + ABOUT MERGED -->
   <section id="home" class="container mx-auto px-6 pt-36 pb-24 text-center">
     <div class="liquid-card p-10 max-w-3xl mx-auto fade-in">
-
-      <img src="https://i.ibb.co/1K9v7yr/cid.jpg"
+      <img src="https://i.postimg.cc/1tcxtBGk/Cid-kageno.jpg"
            class="w-28 h-28 rounded-full mx-auto mb-6 shadow-lg">
 
       <h1 class="text-5xl font-bold mb-3">
@@ -49,7 +48,7 @@
 
       <div class="flex justify-center gap-4 mt-6 flex-wrap">
         <a href="#projects" class="liquid-btn primary-btn">Explore Work</a>
-        <a href="#contact" class="liquid-btn">Contact</a>
+        
         <a href="https://github.com/" target="_blank" class="liquid-btn">GitHub</a>
         <a href="https://wa.me/" target="_blank" class="liquid-btn">WhatsApp</a>
       </div>
