--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
   <footer class="mt-20 pb-6 flex justify-center">
     <div class="glass-footer px-6 py-3 rounded-2xl text-center text-sm shadow-lg">
       <p class="opacity-70">
-        © <span id="year"></span> Cid Kageno — Portfolio
+        © <span id="year"></span> Cid Kageno — All Rights Reserved.
       </p>
     </div>
   </footer>
