--- a/index.html
+++ b/index.html
@@ -48,9 +48,8 @@
 
       <div class="flex justify-center gap-4 mt-6 flex-wrap">
         <a href="#projects" class="liquid-btn primary-btn">Explore Work</a>
-        
-        <a href="https://github.com/" target="_blank" class="liquid-btn">GitHub</a>
-        <a href="https://wa.me/" target="_blank" class="liquid-btn">WhatsApp</a>
+        <a href="https://github.com/cid-kageno-dev" target="_blank" class="liquid-btn">GitHub</a>
+        <a href="https://wa.me/+8801731371266" target="_blank" class="liquid-btn">WhatsApp</a>
       </div>
 
     </div>
@@ -97,7 +96,7 @@
         Reach out for collaborations, questions, or project ideas.
       </p>
 
-      <a href="mailto:example@gmail.com" class="liquid-btn primary-btn">Email Me</a>
+      <a href="mailto: cidkageno105@gmail.com" class="liquid-btn primary-btn">Email Me</a>
     </div>
   </section>
 
